kubernetes/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-tracking
  namespace: order-tracking
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: order-tracking.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-tracking-ui
                port:
                  number: 8080
  tls:
    - hosts:
        - order-tracking.local
      secretName: order-tracking-local-tls
